hphp/test/zend/good/ext/calendar/tests/cal_info.php
<?php
  print_r(cal_info());
  print_r(cal_info(1));
  print_r(cal_info(99999));
?>