hphp/test/zend/bad/ext/spl/tests/SplFixedArray__construct_param_null.php
<?php

$array = new SplFixedArray( NULL );

print_r( $array );

?>